--- a/style.css
+++ b/style.css
@@ -2,4 +2,17 @@
 
 body {
   font-family: 'Poppins', sans-serif;
+  overflow: hidden;
+}
+
+.color {
+  background-color: rgb(33 41 75);
+}
+
+.text-color-all {
+  color: rgb(33 41 75);
+}
+
+.height-text {
+  line-height: 30px;
 }
